Also match -Wl,-framework for OSX framework

Freedesktop #1278 (https://bugs.freedesktop.org/show_bug.cgi?id=1278)